--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  </head>
  <body style="background-color: #222725;">
     <header id="home">
-        <nav class="navBar d-flex justify-content-center align-items-center">
+        <nav class="navBar d-flex justify-content-center align-items-center center">
             <div class="nav d-flex justify-content-center align-items-center">
                 <ul class="d-flex align-items-center justify-content-around">
                     <li><a class="text-decoration-none" href="#home">Inicio</a></li>
@@ -23,10 +23,11 @@
                 </ul>
             </div>
         </nav>
-        <div class="container-fluid row d-flex justify-content-around align-items-center" name="home">
+        <div class="container-fluid row d-flex justify-content-around align-items-center text-start" name="home">
             <div class="col-md-6">
                 <div class="title">
-                    <p>Hello,meu nome é <strong>Darlan</strong> e eu sou um</p>
+                    <h1 class="titleAbout">Sobre mim</h1>
+                    <div class="titlePhrase">Olá me chamo <strong>Darlan</strong> e atualmente estou em busca da primeira oportunidade na aréa de desenvolvimento,se dedicando ao máximo ao estudos e praticando com projetos,amante da tecnologia e pretendo cursar a faculdade de <strong>Ciência da Computação </strong>ainda este ano.</div>
                     <h1>Desenvolvedor <strong>FRONT END</strong></h1>
                         <div class="contact d-flex justify-content-center align-items-start">
                             <ul class="d-flex align-items-center justify-content-center footerImages">
@@ -112,7 +113,7 @@
                         <div class="details">
                           <div class="center">
                             <h1 style="color: #f05033;">GIT</h1>
-                            <p>Git é o sistema de controle de versão open source usado para o controle de histórico de alterações nos arquivos.</p>
+                            <p>Git é um sistema de controle de versão open source usado para o controle de histórico de alterações nos arquivos.</p>
                           </div>
                         </div>
                       </div>
@@ -137,7 +138,7 @@
                 <div class="row imageProjects d-flex justify-content-center align-items-center">
                     <a class="col-lg-4" target="_blank" href="https://github.com/darlanbbs/e-commerce-page"><img src="img/projetos/e-commerce.png" alt=""></a>
                     <a class="col-lg-4" target="_blank" href="https://github.com/darlanbbs/ProjectFilms"><img src="img/projetos/projectFilms1.png" alt=""></a>
-                    <a class="col-lg-4" target="_blank" href="https://github.com/darlanbbs/Countdown-Rocket-Chall"><img src="img/projetos/ready.png" alt=""></a>
+                    <a class="col-lg-4" target="_blank" href="https://github.com/darlanbbs/Project-Space"><img src="img/projetos/projectSpace1.png" alt=""></a>
             </div>
            <button><a href="https://github.com/darlanbbs?tab=repositories" target="_blank" class="moreProjects">Mais projetos em<img src="img/github-icon.png" alt=""></a></button>
         </div>
