--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="col-md-6">
                 <div class="title">
                     <h1 class="titleAbout">Sobre mim</h1>
-                    <div class="titlePhrase text-light">Olá me chamo <strong>Darlan</strong> e atualmente estou em busca da primeira oportunidade na aréa de desenvolvimento,se dedicando ao máximo ao estudos e praticando com projetos,amante da tecnologia e pretendo cursar a faculdade de <strong>Ciência da Computação </strong>ainda este ano.</div>
+                    <div class="titlePhrase text-light">Hello me chamo <strong>Darlan</strong> e atualmente estou em busca da primeira oportunidade na aréa de desenvolvimento,se dedicando ao máximo ao estudos e praticando com projetos,amante da tecnologia e pretendo cursar a faculdade de <strong>Ciência da Computação </strong>ainda este ano.</div>
                     <h1>Desenvolvedor <strong>FRONT END</strong></h1>
                         <div class="contact d-flex justify-content-center align-items-start">
                             <ul class="d-flex align-items-center justify-content-center footerImages">
