--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div class="contact d-flex justify-content-center align-items-start">
                             <ul class="d-flex align-items-center justify-content-center footerImages">
                                 <li><a class="text-decoration-none" target="_blank" href="https://github.com/darlanbbs"><i class="bi bi-github"></i></a></li>
-                                
+                                <li><a class="text-decoration-none" target="_blank" href="https://discord.com/channels/@me/987505682943197214"><i class="bi bi-discord"></i></a></li>
                                 <li><a class="text-decoration-none" target="_blank" href="https://www.linkedin.com/in/darlan-bomfim-903582260/"><i class="bi bi-linkedin"></i></a></li>
                                 <li><a class="text-decoration-none" target="_blank" href="https://wa.link/7grkr9"><i class="bi bi-whatsapp"></i></a></li>
                             </ul>
