--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
                 </li>
                 <li>
                   <a
+                    href="https://docs.google.com/document/d/1rewVrA_iNEWOsepTlNcn-VJOrZcUyN-_/edit?usp=sharing&ouid=101946289805975380366&rtpof=true&sd=true"
+                    target="_blank"
+                  >
+                    <button class="button-57" role="button">
+                      <span class="text">Curriculo</span>
+                      <span>Darlan Bomfim</span>
+                    </button>
+                  </a>
+                </li>
+                <li>
+                  <a
                     class="text-decoration-none"
                     target="_blank"
                     href="https://wa.link/7grkr9"
