--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <a
                     class="text-decoration-none"
                     target="_blank"
-                    href="https://www.linkedin.com/in/darlan-bomfim-903582260/"
+                   href="https://drive.google.com/uc?export=download&id=1FZeSYR-7B4sZmcPalogAjXcbP_wbxCRH"
                     ><i class="bi bi-linkedin"></i
                   ></a>
                 </li>
