--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
                 </li>
                 <li>
                    <a
-                    href="https://docs.google.com/document/d/1rewVrA_iNEWOsepTlNcn-VJOrZcUyN-_/edit?usp=sharing&ouid=101946289805975380366&rtpof=true&sd=true"
-                    target="_blank"
+href="https://drive.google.com/uc?id=1IxuibGvn3q5YFWL5buWXNK_YGgtCHylR&export=download" download
                   >
                     <button class="button-57" role="button">
                       <span class="text">Curriculo</span>
